Added publish action, using GH packages now